--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ html {
 /* ================== */
 body {
   font-family: "Poppins", sans-serif;
-  background: #E5E5E5;
-  color: #fff;
+  background: #f6f6f6;
+  color: #0f1f1c;
   font-size: 25px;
   font-weight: 500;
   line-height: 1.5;
@@ -75,8 +75,132 @@ body {
           flex: 1 1 auto;
 }
 
+.none {
+  display: none !important;
+}
+
+.container-right {
+  padding-left: calc((100% - 1260px) / 2 + 10px);
+}
+
+.container-left {
+  padding-right: calc((100% - 1260px) / 2 + 10px);
+}
+
 [class*="__container"] {
   max-width: 1260px;
   margin: 0 auto;
   padding: 0px 10px;
+}
+
+.header {
+  position: relative;
+  min-height: 940px;
+  background: -o-linear-gradient(317.95deg, #428e5f -17.38%, #112120 78.4%), #204434;
+  background: linear-gradient(132.05deg, #428e5f -17.38%, #112120 78.4%), #204434;
+  padding-top: 44px;
+  color: #fff;
+}
+
+.header::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 96px;
+  background-image: url(./../img/header/header-bottom.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.header__top {
+  margin-bottom: 86px;
+}
+
+.nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__logo-link {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  cursor: pointer;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 80px;
+          column-gap: 80px;
+}
+
+.nav__list a {
+  position: relative;
+}
+
+.nav__list a.activ::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 10px;
+  bottom: -6px;
+  height: 4px;
+  display: block;
+  background: #c4c4c4;
+  border-radius: 100px;
+}
+
+.nav__list a:hover::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 10px;
+  bottom: -6px;
+  height: 4px;
+  display: block;
+  background: #c4c4c4;
+  border-radius: 100px;
+}
+
+.nav__list-link {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  cursor: pointer;
+}
+
+.nav__login {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-column-gap: 25px;
+          column-gap: 25px;
+}
+
+.nav__login-link {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.btn {
+  display: inline-block;
+  padding: 13px 44px;
+  background: -o-linear-gradient(320.46deg, #ff7b4e 15.57%, #ff584e 95.03%), #ffffff;
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #ffffff;
+  border-radius: 100px;
 }
