--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,23 @@ body {
   background-size: cover;
 }
 
+.header::before {
+  position: absolute;
+  content: "";
+  right: 57px;
+  top: 173px;
+  width: 830px;
+  height: 622px;
+  background-image: url(./../img/header/header-decor.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 98;
+}
+
 .header__top {
   margin-bottom: 86px;
+  position: relative;
+  z-index: 99;
 }
 
 .nav {
@@ -203,4 +218,89 @@ body {
   background: -o-linear-gradient(320.46deg, #ff7b4e 15.57%, #ff584e 95.03%), #ffffff;
   background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #ffffff;
   border-radius: 100px;
+}
+
+.btn:hover {
+  color: #f5e97f;
+  -webkit-transition: color 0.2s ease-in;
+  -o-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+
+.btn:active {
+  position: relative;
+  top: 1px;
+}
+
+.header__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__content {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  max-width: 592px;
+}
+
+.header__badge {
+  display: inline-block;
+  font-size: 18px;
+  padding: 12px 30px;
+  margin-bottom: 7px;
+  background: rgba(255, 255, 255, 0.25);
+  border-radius: 15px;
+}
+
+.header__title {
+  font-weight: 400;
+  font-size: 55px;
+  margin-bottom: 30px;
+}
+
+.header__text {
+  font-weight: 700;
+  opacity: 0.5;
+  margin-bottom: 68px;
+}
+
+.header__btn {
+  font-weight: 600;
+  color: #fefefe;
+  padding: 27px 48px;
+  background: -o-linear-gradient(320.46deg, #ff7b4e 15.57%, #ff584e 95.03%);
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%);
+  border-radius: 27px;
+}
+
+.header__btn:hover {
+  color: #f5e97f;
+  -webkit-transition: color 0.2s ease-in;
+  -o-transition: color 0.2s ease-in;
+  transition: color 0.2s ease-in;
+}
+
+.header__btn:active {
+  position: relative;
+  top: 1px;
+}
+
+.header__img {
+  position: relative;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.header__img img {
+  width: 894px;
+  height: 940px;
+  position: absolute;
+  top: -180px;
+  right: -87px;
 }
