--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 // Основные настройки страницы
 body {
 	font-family: "Poppins", sans-serif;
-	background: #E5E5E5;
+	background: #e5e5e5;
 	color: #0f1f1c;
 	font-size: 25px;
 	font-weight: 500;
@@ -555,12 +555,12 @@ body {
 .cta {
 	padding: 100px 0px 35px;
 	// .cta__container
-	
+
 	&__container {
 	}
-	
+
 	// .cta__column
-	
+
 	&__column {
 		display: flex;
 		flex-direction: column;
@@ -570,7 +570,8 @@ body {
 		border-radius: 60px;
 		padding: 115px 0px;
 		position: relative;
-		&::before,&::after {
+		&::before,
+		&::after {
 			position: absolute;
 			content: "";
 			width: 63px;
@@ -613,5 +614,74 @@ body {
 		font-size: 20px;
 		padding: 25px 55px;
 		color: #fff;
+	}
+}
+
+// subscribe
+
+.subscribe {
+	padding: 100px 0px 18px;
+
+	// .subscribe__container
+
+	&__container {
+	}
+
+	// .subscribe__column
+
+	&__column {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	// .subscribe__title
+
+	&__title {
+		font-weight: 600;
+		font-size: 55px;
+		max-width: 494px;
+		margin-bottom: 60px;
+	}
+
+	// .subscribe__form
+
+	&__form {
+		display: flex;
+		column-gap: 20px;
+		justify-content: space-between;
+		min-width: 800px;
+		background: linear-gradient(0deg, #ffffff, #ffffff), #c4c4c4;
+		border-radius: 35px;
+		padding: 12px 15px 12px 46px;
+	}
+
+	// .subscribe__input
+
+	&__input {
+		min-width: 248px;
+		font-weight: 500;
+		font-size: 24px;
+		color: rgba(15, 31, 28, 0.5);
+		&::placeholder {
+			font-family: "Poppins", sans-serif;
+			font-style: normal;
+			font-weight: 500;
+			font-size: 24px;
+			line-height: 1.5;
+			color: rgba(15, 31, 28, 0.5);
+		}
+		&:focus {
+			outline: none;
+		}
+	}
+
+	// .subscribe__button
+
+	&__button {
+		border-radius: 35px;
+		color: #fff;
+		padding: 34px 87px;
 	}
 }
