--- a/css/media.css
+++ b/css/media.css
@@ -1,17 +1,88 @@
-@media (max-width: 1220px) {
-  [class*="__container"] {
-    max-width: 970px;
+@media (max-width: 1269px) {
+  .container-right {
+    padding-left: 15px;
   }
 }
 
-@media (max-width: 991.98px) {
-  [class*="__container"] {
-    max-width: 750px;
+@media (max-width: 1000px) {
+  body.no-scroll {
+    overflow: hidden;
   }
-}
-
-@media (max-width: 767.98px) {
-  [class*="__container"] {
-    max-width: none;
+  .nav__list {
+    display: none;
+  }
+  .nav__login {
+    display: none;
+  }
+  .nav__toggle {
+    display: block;
+    background-color: transparent;
+  }
+  .nav_mobile {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background: -o-linear-gradient(227deg, #428e5f -17.38%, #112120 78.4%), #204434;
+    background: linear-gradient(223deg, #428e5f -17.38%, #112120 78.4%), #204434;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    overflow: auto;
+  }
+  .nav_mobile .nav__logo-link {
+    font-size: 34px;
+  }
+  .nav_mobile .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 40px;
+  }
+  .nav_mobile .nav__list a.activ::after {
+    display: none;
+  }
+  .nav_mobile .nav__list a:hover::after {
+    display: none;
+  }
+  .nav_mobile .nav__list-link {
+    font-size: 25px;
+  }
+  .nav_mobile .nav__login {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 40px;
+    margin-top: 40px;
+  }
+  .nav_mobile .nav__login-link {
+    font-size: 25px;
+  }
+  .nav_mobile .nav__toggle {
+    position: fixed;
+    right: 50px;
+    top: 50px;
   }
 }
