--- a/css/media.scss
+++ b/css/media.scss
@@ -6,28 +6,102 @@
 // Условные мобилки
 //@media (max-width: 767.98px) {}
 
+@media (max-width: 1269px) {
+	.container-right {
+		padding-left: 15px;
+	}
+}
+
+@media (max-width: 1000px) {
+	body.no-scroll {
+		overflow: hidden;
+	}
+	.nav__list {
+		display: none;
+	}
+	.nav__login {
+		display: none;
+	}
+	.nav__toggle {
+		display: block;
+		background-color: transparent;
+	}
+	.nav_mobile {
+		position: fixed;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 99;
+		background: linear-gradient(223deg, #428e5f -17.38%, #112120 78.4%), #204434;
+		flex-direction: column;
+		align-items: center;
+		padding-top: 40px;
+		padding-bottom: 40px;
+		overflow: auto;
+		.nav__logo-link {
+			font-size: 34px;
+		}
+		.nav__list {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			row-gap: 40px;
+			a {
+				&.activ::after {
+					display: none;
+				}
+				&:hover::after {
+					display: none;
+				}				
+			}
+			&-link {
+				font-size: 25px;
+			}
+		}
+		.nav__login {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			row-gap: 40px;
+			margin-top: 40px;
+			&-link {
+				font-size: 25px;
+			}
+		}
+		.nav__toggle {
+			position: fixed;
+			right: 50px;
+			top: 50px;
+		}
+	}
+}
+
+
+
+
 // №1
 @media (max-width: 1250px) {
 
 }
 @media (max-width: 1220px) {
-	[class*="__container"] {
-		max-width: 970px;
-	}
+	// [class*="__container"] {
+	// 	max-width: 970px;
+	// }
 	
 }
 // №2
 @media (max-width: 991.98px) {
-	[class*="__container"] {
-		max-width: 750px;
-	}
+	// [class*="__container"] {
+	// 	max-width: 750px;
+	// }
 	
 }
 // №3
 @media (max-width: 767.98px) {
-	[class*="__container"] {
-		max-width: none;
-	}
+	// [class*="__container"] {
+	// 	max-width: none;
+	// }
 	
 }
 @media (max-width: 650px) {
