--- a/css/media.css
+++ b/css/media.css
@@ -85,4 +85,76 @@
     right: 50px;
     top: 50px;
   }
+  .header__img img {
+    right: -256px;
+  }
+  .header__img::before {
+    right: -300px;
+  }
+}
+
+@media (max-width: 850px) {
+  .header {
+    padding-top: 20px;
+    overflow: hidden;
+    min-height: unset;
+  }
+  .header__row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header__img::before {
+    top: 100px;
+    right: 0;
+  }
+  .header__img img {
+    position: static;
+    width: 70%;
+    height: auto;
+  }
+  .header__top {
+    margin-bottom: 40px;
+  }
+  .header__title {
+    font-size: 35px;
+    margin-bottom: 20px;
+  }
+  .header__text {
+    font-size: 20px;
+    margin-bottom: 40px;
+    max-width: 400px;
+  }
+  .header__btn {
+    padding: 20px 30px;
+    font-size: 20px;
+    border-radius: 18px;
+  }
+  .header__badge {
+    font-size: 16px;
+    padding: 8px 20px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+  }
+}
+
+@media (max-width: 460px) {
+  .nav_mobile .nav__toggle {
+    top: 20px;
+    right: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .header__img::before {
+    top: 50px;
+    right: -30px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header__img::before {
+    display: none;
+  }
 }
