--- a/css/media.scss
+++ b/css/media.scss
@@ -53,7 +53,7 @@
 				}
 				&:hover::after {
 					display: none;
-				}				
+				}
 			}
 			&-link {
 				font-size: 25px;
@@ -75,47 +75,77 @@
 			top: 50px;
 		}
 	}
+	.header__img img {
+		right: -256px;
+	}
+	.header__img {
+		&::before {
+			right: -300px;
+		}
+	}
 }
 
+@media (max-width: 850px) {
+	.header {
+		padding-top: 20px;
+		overflow: hidden;
+		min-height: unset;
+	}
+	.header__row {
+		flex-direction: column;
+	}
+	.header__img {
+		&::before {
+			top: 100px;
+			right: 0;
+		}
+		img {
+			position: static;
+			width: 70%;
+			height: auto;
+		}
+	}
+	.header__top {
+		margin-bottom: 40px;
+	}
+	.header__title {
+		font-size: 35px;
+		margin-bottom: 20px;
+	}
+	.header__text {
+		font-size: 20px;
+		margin-bottom: 40px;
+		max-width: 400px;
+	}
+	.header__btn {
+		padding: 20px 30px;
+		font-size: 20px;
+		border-radius: 18px;
+	}
+	.header__badge {
+		font-size: 16px;
+		padding: 8px 20px;
+		border-radius: 10px;
+		margin-bottom: 5px;
+	}
+}
 
+@media (max-width: 460px) {
+	.nav_mobile .nav__toggle {
+		top: 20px;
+		right: 20px;
+	}
+}
 
+@media (max-width: 400px) {
+	.header__img::before {
+		top: 50px;
+		right: -30px;
+	}
+}
 
-// №1
-@media (max-width: 1250px) {
-
+@media (max-width: 320px) {
+	.header__img::before {
+		display: none;
+	}
 }
-@media (max-width: 1220px) {
-	// [class*="__container"] {
-	// 	max-width: 970px;
-	// }
-	
-}
-// №2
-@media (max-width: 991.98px) {
-	// [class*="__container"] {
-	// 	max-width: 750px;
-	// }
-	
-}
-// №3
-@media (max-width: 767.98px) {
-	// [class*="__container"] {
-	// 	max-width: none;
-	// }
-	
-}
-@media (max-width: 650px) {
-	
-}
-// №4
-@media (max-width: 525px) {
-	
-}
-@media (max-width: 509.98px) {
-	
-}
-// №5
-@media (max-width: 374.98px) {
-	
-}
-//
